<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizzApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Back</string>
    <string name="submit">Submit Answer</string>
    <string name="finish">Finish</string>
    <string name="question">THIS NEEDS TO VARY</string>
    <string name="answer1">A</string>
    <string name="answer2">B</string>
    <string name="answer3">C</string>
    <string name="answer4">D</string>


</resources>
